Tweak unit testing config