@@ -105,7 +105,22 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
     lintOptions {
+        //disable 'TypographyFractions','TypographyQuotes'
+        //enable 'RtlHardcoded', 'RtlCompat', 'RtlEnabled'
+        //check 'NewApi', 'InlinedApi'
         abortOnError false
+    }
+    testOptions {
+        reportDir "build/outputs/reports"
+        resultsDir "build/outputs/results"
+        unitTests {
+            all {
+                //jvmArgs '-XX:MaxPermSize=256m'
+                //if (it.name == 'testDebugUnitTest') {
+                //    systemProperty 'debug', 'true'
+                //}
+            }
+        }
     }
     ndkVersion '21.3.6528147'
 }
@@ -113,9 +128,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'androidx.core:core-ktx:+'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
